[package]
name = "keylometer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
toml = "0.5"
clap = "2.33.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["net"] }
axum = "0.2.8"
hyperlocal = "0.8"
hyper = { version = "0.14", features = ["stream", "server", "http1", "tcp", "client"] }
thiserror = "1.0.30"
tower-http = { version = "0.1.1", features = ["auth", "trace"] }
tower = "0.4.10"
futures = "0.3.17"
hyper-tls = "0.5.0"
urlencoding = "2.1.0"
tracing = "0.1"
tracing-subscriber = "0.2"
hmac = "0.11.0"
sha2 = "0.9.8"
